--- a/.env.template
+++ b/.env.template
@@ -1,18 +1,16 @@
-# Todoist API
-TODOIST_API_TOKEN=your_todoist_api_token
+# Notion API Configuration
+# Get from: https://www.notion.so/my-integrations
+NOTION_API_KEY=secret_your_notion_integration_token_here
 
-# Todoist Webhook (REQUIRED for webhook verification)
-# Get this from Todoist Developer Console -> Your App -> Webhooks -> Client Secret
-# Example: 0123456789abcdef0123456789abcdef01234567
-TODOIST_CLIENT_SECRET=your_todoist_client_secret
+# Notion Database IDs
+# Get from database share URLs (32-character ID after the last dash)
+NOTION_TASK_DATABASE_ID=your_tasks_database_id_here
+NOTION_AREAS_DATABASE_ID=your_areas_database_id_here
 
-# Notion API
-NOTION_API_KEY=your_notion_api_key
-NOTION_DATABASE_ID=your_notion_database_id
+# Todoist Webhook Configuration
+# Get from: Todoist Developer Console -> Your App -> Webhooks -> Client Secret
+TODOIST_CLIENT_SECRET=your_todoist_webhook_client_secret_here
 
-# Application settings
-PORT=5001
-
-# Logging level: DEBUG, INFO, WARNING, ERROR, CRITICAL
-# Set to DEBUG to see detailed webhook signature verification logs
+# Application Configuration
+PORT=5000
 LOG_LEVEL=INFO
